Fixes to dark mode

--- a/src/public/css/dark-mode.scss
+++ b/src/public/css/dark-mode.scss
@@ -52,7 +52,21 @@ pre {
     }
 }
 
-input[type=text], textarea, select {
+input[type=text], input[type=email], input[type=password], textarea, select {
     background-color: #bbe1fa !important;
     color: #0f4c75 !important;
+}
+
+.card {
+    background-color: #0f4c75;
+    color: #bbe1fa;
+}
+
+.card-header {
+    background-color: #3282b8;
+}
+
+hr {
+    background-color: #3282b8;
+    height: 1px;
 }
